# talking_rock

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  M1B_COMPLETION.md  Makefile  README.md  SECURITY.md  TESTING.md  flake.nix  justfile  pyproject.toml  reos  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md  ReOS_charter.md  copilot-instructions.md
.github/workflows/: ci.yml  test.yml
apps/: README.md
apps/reos-tauri/: README.md  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
apps/reos-tauri/e2e/: app-initialization.spec.ts  chat-functionality.spec.ts  navigation.spec.ts  play-inspector.spec.ts
apps/reos-tauri/src/: cairnView.ts  codeModeView.ts  diffPreview.ts  diffPreviewOverlay.ts  dom.ts  kernel.ts  lockScreen.ts  main.ts  playOverlay.ts  settingsOverlay.ts  style.css  types.ts
apps/reos-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/reos-tauri/src-tauri/src/: auth.rs  main.rs
apps/reos-tauri/src/components/: Chat.test.ts  Navigation.test.ts  PlayInspector.test.ts  types.test.ts
apps/reos-tauri/src/test/: rpc-contracts.test.ts  setup.ts
docs/: M1B_ARCHITECTURE.md  WORKFLOW_EXAMPLE.md  app-vision.md  beginners-guide.md  code_mode_architecture.md  reasoning.md  system-state-design.md  tech-roadmap.md  testing-strategy.md  the-play.md  ui-migration-typescript.md
scripts/: build-appimage.sh  diagnose-stdin.sh  reos-shell-integration.sh
src/reos/: __init__.py  __main__.py  agent.py  alignment.py  app.py  attention.py  auth.py  cli.py  codebase_index.py  commands.py  commit_review.py  commit_watch.py  compact_extractor.py  config.py  context_meter.py  crypto_storage.py  db.py  errors.py  git_poll.py  knowledge_store.py  linux_tools.py  logging_config.py  logging_setup.py  mcp_server.py  mcp_tools.py  models.py  notifications.py  ollama.py  paths.py  play_fs.py  projects_fs.py  recovery.py  security.py  session.py  settings.py  shell_cli.py  shell_context.py  shell_propose.py  storage.py  system_index.py  (+2 more)
src/reos/code_mode/: __init__.py  contract.py  diff_utils.py  executor.py  explorer.py  intent.py  intention.py  perspectives.py  planner.py  session_logger.py  streaming.py  tools.py
src/reos/gui/: __init__.py  main_window.py  projects_widget.py  projects_window.py  settings_widget.py  style.py
src/reos/handlers/: __init__.py  cli_handler.py
src/reos/handoff/: __init__.py  manifests.py  models.py  router.py  tools.py
src/reos/migrations/: __init__.py  runner.py
src/reos/migrations/versions/: 001_baseline.sql
src/reos/providers/: anthropic.py  ollama.py  secrets.py
src/reos/reasoning/: __init__.py  adaptive.py  complexity.py  config_template.toml  conversation.py  engine.py  executor.py  llm_planner.py  planner.py  safety.py
src/reos/rpc/handlers/: __init__.py  approvals.py  conversations.py  play.py
src/reos/services/: __init__.py  chat_service.py  context_service.py  knowledge_service.py  play_service.py
tests/: conftest.py  test_agent_integration.py  test_agent_policy.py  test_agent_routing_e2e.py  test_alignment.py  test_alignment_trigger_context.py  test_api_smoke.py  test_attention.py  test_auth.py  test_chat_respond.py  test_code_executor.py  test_commit_review_on_commit.py  test_context_budget.py  test_db.py  test_diff_utils.py  test_e2e_cairn.py  test_e2e_user_experience.py  test_errors.py  test_git_alignment_integration.py  test_intent.py  test_linux_tools.py  test_mcp_jsonrpc_e2e.py  test_mcp_tools_contract.py  test_parse_gate_e2e.py  test_play_rpc.py  test_reasoning.py  test_riva.py  test_security.py  test_storage_cooldown_determinism.py  test_storage_triggers_integration.py  test_system_index.py  test_tool_provider.py  test_ui_rpc_handlers.py  test_ui_rpc_server.py
tests/integration/: test_db_integrity.py
vscode-extension/: README.md  extension.js  package.json
