[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reos"
version = "0.0.0a0"
description = "Local-first attention kernel scaffold"
authors = [{ name = "ReOS" }]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
keywords = ["git", "attention", "productivity", "local-first", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Environment :: X11 Applications",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<0.32.0",
  "pydantic>=2.8.0,<3.0.0",
  "typer[all]>=0.12.0,<1.0.0",
  "rich>=13.0.0,<14.0.0",
  "tomli>=2.0.0;python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0,<0.8.0",
  "mypy>=1.11.0,<1.13.0",
  "pytest>=8.3.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "pytest-asyncio>=0.23.0,<1.0.0",
  "hypothesis>=6.100.0,<7.0.0",
  "pre-commit>=3.7.0,<4.0.0",
  "pip-audit>=2.7.0,<3.0.0",
]
notifications = [
  "dbus-python>=1.3.0,<2.0.0",
]

[project.scripts]
reos = "reos.cli:main_cli"

[project.urls]
Homepage = "https://github.com/your-org/reos"
Documentation = "https://github.com/your-org/reos#readme"
Repository = "https://github.com/your-org/reos.git"
Issues = "https://github.com/your-org/reos/issues"
Changelog = "https://github.com/your-org/reos/blob/main/CHANGELOG.md"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "TCH", "PTH", "RUF"]
ignore = ["E501"]  # Line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["reos"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests requiring external services",
]
addopts = [
  "--strict-markers",
  "-ra",
]

[tool.coverage.run]
source = ["src/reos"]
branch = true
omit = [
  "*/tests/*",
  "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]
fail_under = 70
show_missing = true

[tool.mypy]
python_version = "3.12"
mypy_path = ["src"]
packages = ["reos"]

# Strict mode settings
strict = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true
strict_equality = true
strict_concatenate = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_generics = true
disallow_subclassing_any = true

# Relaxed for third-party libraries
[[tool.mypy.overrides]]
module = [
  "uvicorn.*",
  "fastapi.*",
  "httpx.*",
  "dbus.*",
  "tomli.*",
]
ignore_missing_imports = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
