[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reos"
version = "0.0.0a0"
description = "Local-first attention kernel scaffold"
authors = [{ name = "ReOS" }]
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<0.32.0",
  "pydantic>=2.8.0,<3.0.0",
  # Authentication & Encryption
  "python-pam>=2.0.0,<3.0.0",       # PAM authentication
  "cryptography>=42.0.0,<44.0.0",   # AES-256-GCM encryption, Argon2
  # LLM Providers
  "keyring>=24.0.0,<26.0.0",        # System keyring for API keys
  "secretstorage>=3.3.0,<4.0.0",    # Linux D-Bus SecretService backend
  "anthropic>=0.40.0,<1.0.0",       # Anthropic Claude API
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0,<0.8.0",
  "mypy>=1.11.0,<1.13.0",
  "pytest>=8.3.0,<9.0.0",
  "pytest-cov>=4.1.0,<6.0.0",
]
semantic = [
  "sentence-transformers>=3.0.0,<6.0.0",  # Vector embeddings for semantic search
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=reos --cov-report=term-missing --cov-fail-under=45"

[tool.coverage.run]
source = ["src/reos"]
branch = true
omit = [
  "*/tests/*",
  "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]
fail_under = 45
show_missing = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
no_implicit_optional = true
strict_equality = true
mypy_path = ["src"]

[tool.mypy-uvicorn]
ignore_missing_imports = true

[tool.mypy-fastapi]
ignore_missing_imports = true

[project.scripts]
reos = "reos.__main__:main"
reos-shell = "reos.shell_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
