[package]
name = "reos_tauri"
version = "0.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
users = "0.11"

[features]
custom-protocol = ["tauri/custom-protocol"]
