[package]
name = "reos_tauri"
version = "0.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

# Authentication & Session Management
rand = "0.8"                   # CSPRNG for session tokens
hex = "0.4"                    # Token encoding
# Note: PAM authentication happens in Python kernel (python-pam)
# Key derivation and encryption also in Python (cryptography library)

[features]
custom-protocol = ["tauri/custom-protocol"]
